data/derived/comb/progs/unify/prog0341.ml.out
Characters 17-22:
  let _ = buildSine(0.5);;
                   ^^^^^
Error: This expression has type float but an expression was expected of type
         expr
